flux/oauth2-proxy/yaml/valkey.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: oauth2-proxy
  labels:
    app: valkey
spec:
  ports:
  - port: 6379
    targetPort: 6379
    name: valkey
  selector:
    app: valkey
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: valkey
  namespace: oauth2-proxy
spec:
  serviceName: "valkey"
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
      - name: valkey
        image: valkey/valkey:9
        command: ["valkey-server"]
        args:
        - --loglevel
        - notice
        ports:
        - containerPort: 6379
          name: valkey
        resources:
          requests:
            memory: 96Mi
          limits:
            memory: 256Mi
